--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -25,6 +25,7 @@ br.only-pc {
 
 video {
   width: 100%;
+  cursor: url("../img/cursor_see.png"), auto;
 }
 
 h3 {
@@ -47,7 +48,7 @@ p.description {
 
 .btn {
   position: relative;
-  width: 210px;
+  width: 160px;
   margin: 0 auto;
   font-size: 12px;
   font-weight: 700;
@@ -378,10 +379,8 @@ p.description {
   margin-bottom: 30px;
 }
 
-.main-brand .image,
-.main-brand .content-group {
-  display: inline-block;
-  vertical-align: middle;
+.main-brand .image {
+  padding: 0 24px;
 }
 
 .main-brand .content-group {
@@ -396,61 +395,29 @@ p.description {
   margin: 20px 0 30px;
 }
 
-.main-brand .video__area {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 56.25%;
-}
-.main-brand .video__area video {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  cursor: url("../img/cursor_see.png"), auto;
-}
-
 .main-brand .pattern {
   position: absolute;
   display: none;
-}
-
-.main-brand .pet-so-chic .image {
-  width: 90%;
 }
 
 .main-brand .pet-so-chic .content-group {
   padding-top: 22px;
 }
 .main-brand .pet-so-chic .content-group .title {
-  width: 110px;
+  width: 111px;
 }
 
-.main-brand .pet-so-chic .content-group .description {
- 
-}
-
-.main-brand .pet-so-chic .pattern.pattern1 {
-  width: 45px;
-  left: 15%;
-  top: 50%;
-}
 .main-brand .pet-so-chic .pattern.pattern2 {
-  width: 65px;
-  right: 30%;
-  top: 45%;
+  display: block;
+  width: 40px;
+  left: 120px;
+  bottom: -60px;
 }
 .main-brand .pet-so-chic .pattern.pattern3 {
-  width: 80px;
-  right: 180px;
-  top: 50%;
-}
-
-.main-brand .pet-so-chic .pattern.pattern4 {
-  width: 210px;
-  right: 27%;
-  top: 48%;
+  display: block;
+  width: 40px;
+  right: -9px;
+  bottom: -158px;
 }
 
 .main-brand .pet-so-chic .video__area {
@@ -460,9 +427,9 @@ p.description {
 .main-brand .maxbone .floating {
   content: '';
   position: absolute;
-  left: -150px;
-  top: 45%;
-  width: 330px;
+  left: -30px;
+  bottom: 267px;
+  width: 153px;
   transition: 1s;
 }
 
@@ -481,20 +448,16 @@ p.description {
   width: 160px;
 }
 
-.main-brand .maxbone .image {
-  
-}
-
 .main-brand .maxbone .video__area {
-  
-  margin: 120px auto 207px;
+  position: relative;
+  width: 70%;
+  margin: 60px auto 100px;
 }
 
 .main-brand .maxbone .pattern {
   width: 48px;
   top: 73%;
   transition: .5s;
-  /* animation: fade-in 1s ease-in-out infinite alternate; */
   display: none;
 }
 
@@ -526,36 +489,35 @@ p.description {
 }
 
 .main-brand .milk-and-pepper .floating.floating1 {
-  width: 347px;
-  right: -145px;
-  top: -256px;
+  width: 160px;
+  right: -1px;
+  bottom: -92px;
+  z-index: 1;
   transition-delay: 0s;
 }
 
 .main-brand .milk-and-pepper .floating.floating2 {
-  width: 117px;
-  right: 156px;
-  top: 0;
+  width: 55px;
+  right: 96px;
+  bottom: -115px;
   transition-delay: .3s;
 }
 
-.main-brand .milk-and-pepper.scroll-spy .floating {
+.main-brand .milk-and-pepper.scroll-spy .floating.floating1 {
   transform: translateX(100%);
+}
+
+.main-brand .milk-and-pepper.scroll-spy .floating.floating2 {
+  transform: translateX(-100%);
 }
 
 .main-brand .milk-and-pepper.scroll-spy.show .floating {
   transform: translateX(0);
 }
 
-.main-brand .milk-and-pepper .image {
-  
-}
 
-.main-brand .milk-and-pepper .content-group {
-  
-}
 .main-brand .milk-and-pepper .content-group .title {
-  width: 320px;
+  width: 188px;
 }
 
 /* NEW */
