--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -29,7 +29,7 @@ video {
 }
 
 h3 {
-  margin-bottom: 85px;
+  margin-bottom: 30px;
   font-size: 32px;
   font-weight: 700;
   text-align: center;
@@ -357,7 +357,7 @@ p.description {
 }
 
 .main-brand .inner {
-  padding: 100px 0 50px;
+  padding: 100px 0 130px;
 }
 
 .main-brand .inner > div {
@@ -373,10 +373,6 @@ p.description {
 
 .main-brand .floating.floating4:hover {
   transform: rotate(45deg);
-}
-
-.main-brand h3 {
-  margin-bottom: 30px;
 }
 
 .main-brand .image {
@@ -522,79 +518,64 @@ p.description {
 
 /* NEW */
 .main-new .inner {
-  padding: 100px 0;
+  padding: 50px 0;
 }
 
-.main-new .swiper .swiper-slide {
-  margin-bottom: 90px;
+.main-new__menu {
+  text-align: center;
+}
+
+.main-new__menu li {
+  display: inline-block;
+  width: calc(50% - 10px);
+  margin-bottom: 58px;
+  padding: 0 4px;
+  vertical-align: top;
+  box-sizing: border-box;
   cursor: url("../img/cursor_hand.png"), auto;
 }
 
-.main-new .swiper-slide .image {
+.main-new__menu li .image {
   position: relative;
 }
-.main-new .swiper-slide .image img {
+
+.main-new__menu li .image img {
   transition: opacity .5s;
 }
 
-.main-new .swiper-slide .image:hover img.front {
+.main-new__menu li .image:hover img.front {
   opacity: 0;
 }
 
-.main-new .swiper-slide .image:hover img.back {
+.main-new__menu li .image:hover img.back {
   opacity: 1;
 }
-.main-new .swiper-slide .image img.front {
+
+.main-new__menu li .image img.front {
   position: absolute;
   left: 0;
   top: 0;
   opacity: 1;
 }
-.main-new .swiper-slide .image img.back {
+.main-new__menu li .image img.back {
   opacity: 0;
 }
-.main-new .swiper-slide .text-group {
+.main-new__menu li .text-group {
   margin-top: 25px;
   color: #000;
 }
-.main-new .swiper-slide .text-group .title {
+.main-new__menu li .text-group .title {
   display: block;
-  margin-bottom: 7px;
-  font-size: 16px;
-}
-.main-new .swiper-slide .text-group .description {
-  font-size: 14px;
-  font-weight: 500;
-}
-
-.main-new .swiper .swiper-pagination {
-  width: auto;
-  left: 15px;
-  padding-top: 30px;
-  font-size: 14px;
+  margin-bottom: 5px;
+  font-size: 15px;
   text-align: left;
 }
-
-.main-new .swiper .swiper-prev,
-.main-new .swiper .swiper-next {
-  position: absolute;
-  bottom: 0;
-  cursor: pointer;
-}
-
-.main-new .swiper .swiper-prev span,
-.main-new .swiper .swiper-next span {
-  font-size: 40px;
-}
-
-.main-new .swiper .swiper-prev {
-  left: 45%;
-  cursor: url("../img/cursor_hand_tiny.png"), auto;
-}
-
-.main-new .swiper .swiper-next {
-  right: 45%;
-  cursor: url("../img/cursor_pointer.png"), auto;
+.main-new__menu li .text-group .description {
+  padding: 0;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.6em;
+  text-align: left;
 }
 
 /* SLOGAN */
