--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -102,7 +102,7 @@ p.description {
   top: 0;
   width: 100%;
   height: 75px;
-  z-index: 9;
+  z-index: 10;
   font-size: 20px;
   font-weight: 700;
   color: #000;
@@ -200,13 +200,28 @@ p.description {
   width: 100%;
 }
 
+#gnb > ul > li::before {
+  content: '';
+  position: absolute;
+  left: -100%;
+  top: 45px;
+  width: 35px;
+  height: 47px;
+  background: url("../img/gnb_icon.svg") no-repeat top right/cover;
+  transition: left .3s;
+}
+
+#gnb > ul > li.active::before {
+  left: -33px;
+}
+
 #gnb > ul > li {
   position: relative;
 }
 
 #gnb > ul > li:last-child {
   position: relative;
-  top: 150px;
+  top: 50px;
 }
 
 #gnb > ul > li:last-child a {
@@ -218,45 +233,32 @@ p.description {
   font-size: 25px;
 }
 
-#gnb > ul > li:hover .sub-menu {
+#gnb > ul > li.active .sub-menu {
   display: block;
 }
 
 #gnb > ul > li .sub-menu {
   position: absolute;
   left: 50%;
-  top: 100%;
-  transform: translateX(-50%);
+  top: 0;
   width: 100%;
-  padding: 10px;
-  background-color: #000;
   display: none;
 }
 
+#gnb > ul > li .sub-menu li {
+  position: relative;
+}
+
 #gnb > ul > li .sub-menu li a {
-  padding: 10px;
-  font-size: 15px;
-  color: #fff;
+  padding: 12px 0;
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  color: #000;
 }
 
 #gnb > ul > li .sub-menu li a span {
   position: relative;
-}
-
-#gnb > ul > li .sub-menu li a span::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -5px;
-  width: 100%;
-  height: 3px;
-  background-color: #fff;
-  opacity: 0;
-  transition: .3s;
-}
-
-#gnb > ul > li .sub-menu li a span:hover::after {
-  opacity: 1;
 }
 
 #gnb.open + .top-menu {
