--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -30,7 +30,7 @@ video {
 
 h3 {
   margin-bottom: 30px;
-  font-size: 32px;
+  font-size: 30px;
   font-weight: 700;
   text-align: center;
   color: #000;
@@ -108,11 +108,10 @@ p.description {
   color: #000;
   border-bottom: 1px solid transparent;
   box-sizing: border-box;
-  transition: height .3s;
+  transition: border-color .3s;
 }
 
 #header.active {
-  height: 65px;
   border-bottom-color: #000;
   background-color: #F0EDE6;
 }
@@ -321,7 +320,6 @@ p.description {
   position: relative;
   bottom: -22px;
   margin-bottom: 0;
-  font-size: 32px;
 }
 
 .main-visual .image {
