--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -342,7 +342,8 @@ p.description {
 }
 
 .main-brand .inner {
-  padding: 100px 0 130px;
+  /* padding: 100px 0 130px; */
+  padding: 100px 0;
 }
 
 .main-brand .inner > div {
@@ -467,21 +468,21 @@ p.description {
 .main-brand .milk-and-pepper .floating {
   content: '';
   transition: .5s;
-  position: static;
+  display: none;
 }
 
 .main-brand .milk-and-pepper .floating.floating1 {
   width: 160px;
-  /* right: -1px; */
-  /* bottom: -92px; */
+  right: -1px;
+  bottom: -92px;
   z-index: 1;
   transition-delay: 0s;
 }
 
 .main-brand .milk-and-pepper .floating.floating2 {
   width: 55px;
-  /* right: 96px; */
-  /* bottom: -115px; */
+  right: 96px;
+  bottom: -115px;
   transition-delay: .3s;
 }
 
@@ -497,6 +498,35 @@ p.description {
   /* transform: translateX(0); */
 }
 
+.main-brand .milk-and-pepper .content-group::before,
+.main-brand .milk-and-pepper .content-group::after {
+  content: '';
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.main-brand .milk-and-pepper .content-group::before {
+  width: 160px;
+  height: 135px;
+  right: -40px;
+  bottom: -104px;
+  z-index: 1;
+  background-image: url("../img/layer_hand.png");
+}
+
+.main-brand .milk-and-pepper .content-group::after {
+  width: 55px;
+  height: 60px;
+  right: 71px;
+  bottom: -122px;
+  background-image: url("../img/layer_heart.png");
+}
+
+.main-brand .milk-and-pepper .content-group {
+  position: relative;
+}
 
 .main-brand .milk-and-pepper .content-group .title {
   width: 188px;
@@ -838,7 +868,7 @@ p.description {
   bottom: 30px;
   right: 30px;
   z-index: 9;
-  font-size: 22px;
+  font-size: 15px;
   font-weight: 700;
   text-align: center;
   color: #707070;
@@ -858,20 +888,7 @@ p.description {
   display: none;
 }
 
-#to-top:hover .to-top-punch {
-  display: block;
-}
 
-#to-top .to-top-punch .scratch1, 
-#to-top .to-top-punch .scratch2 {
-  display: inline-block;
-  width: 5px;
-}
-
-#to-top .to-top-punch .punch {
-  width: 25px;
-  margin: 0 auto;
-}
 
 
 /* 미디어쿼리 */
