--- a/css/reset.css
+++ b/css/reset.css
@@ -103,14 +103,14 @@ i[class^="fa"] span {
   transition-delay: 0s;
 }
 .show .movement.to-top.delay-1 {
-  transition-delay: .2s;
+  transition-delay: .3s;
 }
 .show .movement.to-top.delay-2 {
-  transition-delay: .4s;
-}
-.show .movement.to-top.delay-3 {
   transition-delay: .6s;
 }
+.show .movement.to-top.delay-3 {
+  transition-delay: .9s;
+}
 .show .movement.to-top.delay-4 {
-  transition-delay: .8s;
+  transition-delay: 1.2s;
 }
