--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -952,6 +952,108 @@ h3 {
   margin: 0 auto;
 }
 
+/* SEARCH MODAL */
+.search-modal__wrap {
+  content: '';
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 20;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.search-modal__wrap.invisible {
+  display: none;
+}
+
+#search-modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 70vh;
+  background-color: #F0EDE6;
+}
+
+#search-modal .inner {
+  width: 100%;
+  height: 100%;
+  padding: 20px 15px 0;
+  box-sizing: border-box;
+}
+
+#search-modal a {
+  display: block;
+  cursor: url("../img/cursor_hand_tiny.png"), auto;
+}
+
+.search-modal__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.search-modal__header .logo {
+  width: 112px;
+} 
+
+.search-modal__header .close-btn {
+  display: block !important;
+  font-size: 50px;
+}
+
+.search-modal__field {
+  position: relative;
+  margin: 40px 0 35px;
+}
+
+.search-modal__field form {
+  width: 100%;
+}
+
+.search-modal__field input {
+  display: block;
+  width: 100%;
+  height: 64px;
+  border: none;
+  outline: none;
+  font-family: sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: -1px;
+  background-color: transparent;
+  border-bottom: 5px solid #000;
+}
+
+.search-modal__field input::placeholder {
+  font-weight: 700;
+  color: #000;
+}
+
+.search-modal__field a {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 25px;
+}
+.search-modal__field a i.fas {}
+
+.search-modal__keyword {}
+.search-modal__keyword ul {}
+
+.search-modal__keyword ul li + li {
+  margin-top: 5px;
+}
+
+
+.search-modal__keyword ul li a {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.6em;
+}
 
 /* 미디어쿼리 */
 @media screen and (max-width: 1200px) {
