--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -314,6 +314,105 @@ p.description {
   display: none;
 }
 
+/* SEARCH MODAL */
+.search-modal__wrap {
+  content: '';
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 20;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.search-modal__wrap.invisible {
+  display: none;
+}
+
+#search-modal {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #F0EDE6;
+}
+
+#search-modal .inner {
+  width: 100%;
+  height: 100%;
+  padding: 10px 20px;
+  box-sizing: border-box;
+}
+
+#search-modal a {
+  display: block;
+  cursor: url("../img/cursor_hand_tiny.png"), auto;
+}
+
+.search-modal__header {
+  overflow: hidden;
+}
+
+.search-modal__header .close-btn {
+  float: right;
+  font-size: 40px;
+}
+
+.search-modal__field {
+  position: relative;
+  margin: 10px 0 20px;
+}
+
+.search-modal__field form {
+  width: 100%;
+}
+
+.search-modal__field input {
+  display: block;
+  width: 100%;
+  height: 64px;
+  padding: 0;
+  border: none;
+  outline: none;
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: -1px;
+  background-color: transparent;
+  border-bottom: 2px solid #000;
+}
+
+.search-modal__field input::placeholder {
+  font-weight: 700;
+  color: #000;
+}
+
+.search-modal__field a {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 22px;
+}
+
+.search-modal__keyword ul li + li {
+  margin-top: 5px;
+}
+
+.search-modal__keyword ul li a {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.6em;
+}
+
+#search-modal .floating {
+  width: 250px;
+  left: -130px;
+  bottom: 0;
+}
+
 /* MAIN */
 #main {
   margin-top: 75px;
