--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -394,7 +394,7 @@ h3 {
 .main-visual .image {
   width: 730px;
   margin: 0 auto;
-  animation: rotate_image .5s;
+  animation: rotate_image 1s;
 }
 
 @keyframes rotate_image {
