--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -813,6 +813,10 @@ h3 {
   margin-top: 105px;
 }
 
+.main-cotielog__menu li:nth-child(4) {
+  margin-top: 30px;
+}
+
 .main-cotielog__menu li:nth-child(2n) {
   margin-left: 100px;
 }
