--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -23,7 +23,9 @@ br.only-m {
 }
 
 video {
+  display: block;
   width: 100%;
+  cursor: url("../img/cursor_see.png"), auto;
 }
 
 h3 {
@@ -489,19 +491,8 @@ h3 {
   color: #000;
 }
 
-.main-brand .video__area {
-  position: relative;
-  width: 95%;
-  height: 0;
-  padding-bottom: 56.25%;
-}
 .main-brand .video__area video {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  cursor: url("../img/cursor_see.png"), auto;
+  position: relative;
 }
 
 .main-brand .pattern {
@@ -546,6 +537,8 @@ h3 {
 }
 
 .main-brand .pet-so-chic .video__area {
+  position: relative;
+  width: 95%;
   margin: 65px auto 155px;
 }
 
