--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -414,6 +414,169 @@ p.description {
   bottom: 0;
 }
 
+/* FOOTER */
+#footer {
+  position: relative;
+  font-weight: 700;
+  color: #F0EDE6;
+  background-color: #000;
+}
+
+.footer__layer {
+  position: absolute;
+  left: 0;
+  top: -40px;
+  width: 100%;
+  height: 60px;
+  background: url("../img/footer_layer.svg") no-repeat center top/cover;
+  animation: move_layer .5s ease-in-out infinite;
+}
+
+@keyframes move_layer {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-16px);
+  }
+}
+
+#footer .inner {
+  padding: 50px 24px 60px;
+}
+
+#footer .row {
+  overflow: hidden;
+}
+
+#footer a {
+  display: block;
+  cursor: url("../img/cursor_pointer.png"), auto;
+}
+
+.footer__menu li a {
+  font-size: 26px;
+  font-weight: 700;
+}
+
+.footer__menu li + li {
+  margin-top: 12px;
+}
+
+.footer__menu li:hover a {
+  color: #CCC7BB;
+}
+
+.footer__links {
+  position: absolute;
+  right: 24px;
+  top: 50px;
+}
+
+.footer__links li {
+  position: relative;
+  display: inline-block;
+}
+
+.footer__links li + li {
+  margin-left: 5px;
+}
+
+.footer__links li:last-child i.fas {
+  font-size: 30px;
+  color: 	#FEE500;
+}
+
+.footer__links li a {
+  width: 38px;
+  height: 38px;
+  border: 1px solid #ddd;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.footer__links li:last-child a {
+  border: none;
+}
+
+.footer__links li a i.fab {
+  line-height: 38px;
+}
+
+#footer .info {
+  margin: 24px 0 28px;
+}
+
+#footer .info a {
+  padding: 5px 0;
+  font-size: 15px;
+}
+
+#footer .info a:hover {
+  color: #CCC7BB;
+}
+
+#footer .info a span {
+  padding-right: 5px;
+}
+
+#footer .info.open a i.fas {
+  transform: rotate(-180deg);
+}
+
+#footer .info.open > div {
+  display: block;
+}
+
+#footer .info > div {
+  padding-top: 13px;
+  font-family: sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 1.7em;
+  color: #666;
+  display: none;
+}
+
+#footer .info > div address {
+  margin-top: 5px;
+}
+
+#footer .copyright {
+  font-size: 12px;
+  color: rgba(240,237,230,.5);
+}
+
+/* TO TOP */
+#to-top {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  z-index: 9;
+  font-size: 15px;
+  font-weight: 700;
+  text-align: center;
+  color: #707070;
+  cursor: url("../img/cursor_pointer.png"), auto;
+}
+
+#to-top:hover span {
+  transform: rotate(-25deg);
+}
+
+#to-top span {
+  display: block;
+  transition: .3s;
+}
+
+#to-top .to-top-punch {
+  display: none;
+}
+
+
+/* index.html */
 /* MAIN */
 #main {
   margin-top: 75px;
@@ -839,166 +1002,7 @@ p.description {
   transition: .3s;
 }
 
-/* FOOTER */
-#footer {
-  position: relative;
-  font-weight: 700;
-  color: #F0EDE6;
-  background-color: #000;
-}
 
-.footer__layer {
-  position: absolute;
-  left: 0;
-  top: -40px;
-  width: 100%;
-  height: 60px;
-  background: url("../img/footer_layer.svg") no-repeat center top/cover;
-  animation: move_layer .5s ease-in-out infinite;
-}
-
-@keyframes move_layer {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-16px);
-  }
-}
-
-#footer .inner {
-  padding: 50px 24px 60px;
-}
-
-#footer .row {
-  overflow: hidden;
-}
-
-#footer a {
-  display: block;
-  cursor: url("../img/cursor_pointer.png"), auto;
-}
-
-.footer__menu li a {
-  font-size: 26px;
-  font-weight: 700;
-}
-
-.footer__menu li + li {
-  margin-top: 12px;
-}
-
-.footer__menu li:hover a {
-  color: #CCC7BB;
-}
-
-.footer__links {
-  position: absolute;
-  right: 24px;
-  top: 50px;
-}
-
-.footer__links li {
-  position: relative;
-  display: inline-block;
-}
-
-.footer__links li + li {
-  margin-left: 5px;
-}
-
-.footer__links li:last-child i.fas {
-  font-size: 30px;
-  color: 	#FEE500;
-}
-
-.footer__links li a {
-  width: 38px;
-  height: 38px;
-  border: 1px solid #ddd;
-  border-radius: 50%;
-  text-align: center;
-  font-size: 18px;
-  font-weight: 700;
-}
-
-.footer__links li:last-child a {
-  border: none;
-}
-
-.footer__links li a i.fab {
-  line-height: 38px;
-}
-
-#footer .info {
-  margin: 24px 0 28px;
-}
-
-#footer .info a {
-  padding: 5px 0;
-  font-size: 15px;
-}
-
-#footer .info a:hover {
-  color: #CCC7BB;
-}
-
-#footer .info a span {
-  padding-right: 5px;
-}
-
-#footer .info.open a i.fas {
-  transform: rotate(-180deg);
-}
-
-#footer .info.open > div {
-  display: block;
-}
-
-#footer .info > div {
-  padding-top: 13px;
-  font-family: sans-serif;
-  font-size: 13px;
-  font-weight: 500;
-  line-height: 1.7em;
-  color: #666;
-  display: none;
-}
-
-#footer .info > div address {
-  margin-top: 5px;
-}
-
-#footer .copyright {
-  font-size: 12px;
-  color: rgba(240,237,230,.5);
-}
-
-/* TO TOP */
-#to-top {
-  position: fixed;
-  right: 30px;
-  bottom: 30px;
-  z-index: 9;
-  font-size: 15px;
-  font-weight: 700;
-  text-align: center;
-  color: #707070;
-  cursor: url("../img/cursor_pointer.png"), auto;
-}
-
-#to-top:hover span {
-  transform: rotate(-25deg);
-}
-
-#to-top span {
-  display: block;
-  transition: .3s;
-}
-
-#to-top .to-top-punch {
-  display: none;
-}
 
 
 /* 미디어쿼리 */
