--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -85,6 +85,33 @@ h3 {
   position: absolute;
 }
 
+.visual {
+  text-align: center;
+}
+
+.visual .inner {
+  padding-top: 80px;
+}
+
+.visual .title {
+  font-size: 85px;
+}
+
+.visual .image {
+  width: 730px;
+  margin: 0 auto;
+  animation: rotate_image 1s;
+}
+
+@keyframes rotate_image {
+  0% {
+    transform: rotate(-45deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
 /* HEADER */
 #header {
   position: fixed;
@@ -371,6 +398,189 @@ h3 {
   bottom: 20px;
 }
 
+/* FOOTER */
+#footer {
+  position: relative;
+  font-weight: 700;
+  color: #F0EDE6;
+  background-color: #000;
+}
+
+.footer__layer {
+  position: absolute;
+  left: 0;
+  top: -88px;
+  width: 100%;
+  height: 132px;
+  background: url("../img/footer_layer.svg") no-repeat center top/cover;
+  animation: move_layer .5s ease-in-out infinite;
+}
+
+@keyframes move_layer {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-16px);
+  }
+}
+
+#footer .inner {
+  padding: 70px 0;
+}
+
+#footer .row {
+  overflow: hidden;
+}
+
+#footer a {
+  display: block;
+  cursor: url("../img/cursor_pointer.png"), auto;
+}
+
+.footer__menu {
+  float: left;
+}
+
+.footer__menu li a {
+  padding: 14px 0;
+  font-size: 45px;
+  font-weight: 700;
+}
+
+.footer__menu li:hover a {
+  color: #CCC7BB;
+}
+
+.footer__links {
+  float: right;
+}
+
+.footer__links li {
+  position: relative;
+  display: inline-block;
+}
+
+.footer__links li + li {
+  margin-left: 18px;
+}
+
+.footer__links li:last-child i.fas {
+  font-size: 50px;
+  color: 	#FEE500;
+}
+
+.footer__links li::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 5px;
+  left: 0;
+  bottom: 0;
+  border-radius: 3px;
+  background-color: #fff;
+  transition: .3s;
+}
+
+.footer__links li:last-child::before {
+  display: none;
+}
+
+.footer__links li:hover::before {
+  width: 100%;
+  opacity: 1;
+}
+
+.footer__links li a {
+  padding: 10px 0;
+  font-size: 22px;
+  font-weight: 700;
+}
+
+#footer .info {
+  margin: 30px 0 55px;
+}
+
+#footer .info a {
+  padding: 5px 0;
+}
+
+#footer .info a:hover {
+  color: #CCC7BB;
+}
+
+#footer .info a span {
+  padding-right: 5px;
+}
+
+#footer .info.open a i.fas {
+  transform: rotate(-180deg);
+}
+
+#footer .info.open > div {
+  display: block;
+}
+
+#footer .info > div {
+  padding-top: 13px;
+  font-size: 14px;
+  font-weight: 500;
+  color: #666;
+  display: none;
+}
+
+#footer .info > div address {
+  margin-top: 7px;
+}
+
+#footer .copyright {
+  font-size: 17px;
+  color: rgba(240,237,230,.5);
+}
+
+/* TO TOP */
+#to-top {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  z-index: 9;
+  font-size: 22px;
+  font-weight: 700;
+  text-align: center;
+  color: #707070;
+  cursor: url("../img/cursor_pointer.png"), auto;
+}
+
+#to-top:hover span {
+  transform: rotate(-25deg);
+}
+
+#to-top span {
+  display: block;
+  transition: .3s;
+}
+
+#to-top .to-top-punch {
+  display: none;
+}
+
+#to-top:hover .to-top-punch {
+  display: block;
+}
+
+#to-top .to-top-punch .scratch1, 
+#to-top .to-top-punch .scratch2 {
+  display: inline-block;
+  width: 5px;
+}
+
+#to-top .to-top-punch .punch {
+  width: 25px;
+  margin: 0 auto;
+}
+
+
+/* index.html */
 /* MAIN */
 #main {
   margin-top: 100px;
@@ -378,34 +588,10 @@ h3 {
 }
 
 /* VISUAL */
-.main-visual {
-  text-align: center;
-}
-
-.main-visual .inner {
-  padding-top: 80px;
-}
-
 .main-visual .title {
   position: relative;
   bottom: -40px;
   margin-bottom: 0;
-  font-size: 85px;
-}
-
-.main-visual .image {
-  width: 730px;
-  margin: 0 auto;
-  animation: rotate_image 1s;
-}
-
-@keyframes rotate_image {
-  0% {
-    transform: rotate(-45deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
 }
 
 .main-visual .description {
@@ -873,186 +1059,49 @@ h3 {
   transition: .3s;
 }
 
-/* FOOTER */
-#footer {
-  position: relative;
-  font-weight: 700;
-  color: #F0EDE6;
-  background-color: #000;
-}
 
-.footer__layer {
-  position: absolute;
-  left: 0;
-  top: -88px;
-  width: 100%;
-  height: 132px;
-  background: url("../img/footer_layer.svg") no-repeat center top/cover;
-  animation: move_layer .5s ease-in-out infinite;
-}
-
-@keyframes move_layer {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-16px);
-  }
-}
-
-#footer .inner {
-  padding: 70px 0;
-}
-
-#footer .row {
-  overflow: hidden;
-}
-
-#footer a {
-  display: block;
-  cursor: url("../img/cursor_pointer.png"), auto;
-}
-
-.footer__menu {
-  float: left;
-}
-
-.footer__menu li a {
-  padding: 14px 0;
-  font-size: 45px;
-  font-weight: 700;
-}
-
-.footer__menu li:hover a {
-  color: #CCC7BB;
-}
-
-.footer__links {
-  float: right;
-}
-
-.footer__links li {
-  position: relative;
-  display: inline-block;
-}
-
-.footer__links li + li {
-  margin-left: 18px;
-}
-
-.footer__links li:last-child i.fas {
-  font-size: 50px;
-  color: 	#FEE500;
-}
-
-.footer__links li::before {
+/* brands.html */
+/* VISUAL */
+.brand-visual::before {
   content: '';
   position: absolute;
-  width: 0;
-  height: 5px;
   left: 0;
-  bottom: 0;
-  border-radius: 3px;
-  background-color: #fff;
-  transition: .3s;
-}
-
-.footer__links li:last-child::before {
-  display: none;
-}
-
-.footer__links li:hover::before {
+  top: 35%;
   width: 100%;
-  opacity: 1;
+  height: 134px;
+  background: url("../img/brands/layer_line.png") no-repeat center/cover;
 }
 
-.footer__links li a {
-  padding: 10px 0;
-  font-size: 22px;
-  font-weight: 700;
+.brand-visual {
+  position: relative;
 }
 
-#footer .info {
-  margin: 30px 0 55px;
+.brand-visual .inner {
+  padding-bottom: 70px;
 }
 
-#footer .info a {
-  padding: 5px 0;
+.brand-visual .title {
+  margin-bottom: 22px;
 }
 
-#footer .info a:hover {
-  color: #CCC7BB;
+.brand-visual .floating.floating1 {
+  left: 0;
+  bottom: -50px;
+  width: 415px;
 }
 
-#footer .info a span {
-  padding-right: 5px;
+.brand-visual .floating.floating2 {
+  right: -190px;
+  top: 45%;
+  width: 347px;
 }
 
-#footer .info.open a i.fas {
-  transform: rotate(-180deg);
+.brand-visual .floating.floating3 {
+  right: 100px;
+  bottom: 20%;
+  width: 117px;
 }
 
-#footer .info.open > div {
-  display: block;
-}
-
-#footer .info > div {
-  padding-top: 13px;
-  font-size: 14px;
-  font-weight: 500;
-  color: #666;
-  display: none;
-}
-
-#footer .info > div address {
-  margin-top: 7px;
-}
-
-#footer .copyright {
-  font-size: 17px;
-  color: rgba(240,237,230,.5);
-}
-
-/* TO TOP */
-#to-top {
-  position: fixed;
-  right: 30px;
-  bottom: 30px;
-  z-index: 9;
-  font-size: 22px;
-  font-weight: 700;
-  text-align: center;
-  color: #707070;
-  cursor: url("../img/cursor_pointer.png"), auto;
-}
-
-#to-top:hover span {
-  transform: rotate(-25deg);
-}
-
-#to-top span {
-  display: block;
-  transition: .3s;
-}
-
-#to-top .to-top-punch {
-  display: none;
-}
-
-#to-top:hover .to-top-punch {
-  display: block;
-}
-
-#to-top .to-top-punch .scratch1, 
-#to-top .to-top-punch .scratch2 {
-  display: inline-block;
-  width: 5px;
-}
-
-#to-top .to-top-punch .punch {
-  width: 25px;
-  margin: 0 auto;
-}
 
 
 /* 미디어쿼리 */
